--- a/springboot/src/main/resources/templates/carlist.html
+++ b/springboot/src/main/resources/templates/carlist.html
@@ -67,6 +67,19 @@
     <a th:href="@{hiThymeleaf(name=${car.name})}">Hello Thymeleaf</a><br>
     <a th:href="@{hiThymeleaf(name=${car.name},price=120)}">Hello Thymeleaf</a><br>
 
+    <hr>
+    <h3>文字国际化表达式</h3>
+    <p th:text="#{welcome}"></p>
+
+    <li id="i18n">
+        <th:block th:if="${#locale.getCountry().equals('US')}">
+            <a th:attr="href='/carlist?locale=zh_CN'">中文</a>
+        </th:block>
+        <th:block th:if="${#locale.getCountry().equals('CN')}">
+            <a th:attr="href='/carlist?locale=en_US'">English</a>
+        </th:block>
+    </li>
+
 </div>
 
 <h1>布局</h1>
